--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid p-0">
     <div class="card p-3 border-0">
         <div class="d-flex justify-content-between align-items-center">
             <h2 class="card-title">Transactions</h2>
@@ -7,7 +7,7 @@
     </div>
 
     <div class="card">
-        <div class="card-header">
+        <div class="card-header bg-white">
             <h3 class="card-title">Transaction History</h3>
         </div>
         <div class="card-body">
