--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,6 +1,20 @@
 <p>{{this.authService.currentUserLoggedIn()?.username}} main works!</p>
 
 <header>
+
+    <!-- <div id="containerAlerts" class="container-fluid p-0">
+            @if(this.alertMessage()){
+
+            }
+        </div> -->
+    @if(alertMessage()) {
+    <div class="alert alert-info alert-dismissible">
+        {{alertMessage()}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    }
+
+
     <nav class="container-fluid p-0">
         <div class="card">
             <div class="card-body d-flex flex-row ">
@@ -35,6 +49,9 @@
                     <button class="btn btn-light text-start" type="button" routerLink="transactions"
                         routerLinkActive="active"><img src="../../../assets/images/icon_transaction_sidebar.svg"
                             alt="icon_transaction" class="icon_options_sidebar">Transactions</button>
+                    <button class="btn btn-light text-start" type="button" routerLink="categories"
+                        routerLinkActive="active"><img src="../../../assets/images/icon_categories_sidebar.svg"
+                            alt="icon_transaction" class="icon_options_sidebar">Categories</button>
                 </div>
             </div>
 
@@ -45,7 +62,7 @@
             !=
             undefined) {
             <!-- <app-transactions [userId]="userId()"></app-transactions> -->
-            <router-outlet />
+            <router-outlet/>
             }
         </div>
     </div>
