--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+//Table
+//classes for elements for table transactions - categories
+.btn-options {
+    border: none;
+    background-color: transparent;
+}
+
+.dropdown-toggle::after {
+    display: none !important;
+}
+
+.title_options {
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0.25rem 1rem;
+}
