--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -2,7 +2,7 @@
     <div class="card p-3 border-0">
         <div class="d-flex justify-content-between align-items-center">
             <h2 class="card-title">Transactions</h2>
-            <button class="btn btn-primary">new transaction</button>
+            <button class="btn btn-primary" (click)="navigateToAddTransaction()">new transaction</button>
         </div>
     </div>
 
@@ -34,7 +34,7 @@
                         <!-- <th scope="row">1</th> -->
                         <td class="align-middle">{{transaction.date | date:'d/M/yy'}}</td>
                         <td class="align-middle">{{transaction.description}}</td>
-                        <td class="align-middle">{{transaction.category}}</td>
+                        <td class="align-middle">{{transaction.categoryId}}</td>
                         <td class="align-middle">{{transaction.amount + "" +
                             authService.currentUserLoggedIn()!.currency}}</td>
                         <!-- <td><button type="button" class="btn btn-outline-dark">...</button></td> -->
