--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -11,16 +11,9 @@
             <h3 class="card-title">Transaction History</h3>
         </div>
         <div class="card-body">
-            <!-- <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a> -->
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <!-- <th scope="col">#</th> -->
                         <th scope="col">Date</th>
                         <th scope="col">Transaction name</th>
                         <th scope="col">Category</th>
@@ -31,39 +24,11 @@
                 <tbody>
                     @for (transaction of transactions(); track transaction.transactionId) {
                     <tr>
-                        <!-- <th scope="row">1</th> -->
                         <td class="align-middle">{{transaction.date | date:'d/M/yy'}}</td>
-                        <td class="align-middle">{{transaction.description}}</td>
-                        <td class="align-middle">{{transaction.categoryId}}</td>
+                        <td class="align-middle">{{transaction.transactionName}}</td>
+                        <td class="align-middle">{{transaction.categoryName}}</td>
                         <td class="align-middle">{{transaction.amount + "" +
                             authService.currentUserLoggedIn()!.currency}}</td>
-                        <!-- <td><button type="button" class="btn btn-outline-dark">...</button></td> -->
-
-                        <!-- <td class="align-middle">
-                            <button mat-icon-button [matMenuTriggerFor]="menu"
-                                aria-label="Example icon-button with a menu">
-                                <img width="30px"
-                                    height="30px" src="../../../assets/images/icon_transactions_dots.svg"
-                                    alt="">
-                            </button>
-                            <mat-menu bckground-menu #menu="matMenu">
-                                <button mat-menu-item>
-                                    <span>Redial</span>
-                                </button>
-                                <button mat-menu-item>
-                                    <span>Disable alerts</span>
-                                </button>
-                            </mat-menu>
-                        </td> -->
-
-                        <!-- <td class="align-middle"><button id="dropdownMenuButtonTransactionButtons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-options dropdown-toggle"><img width="30px"
-                                    height="30px" src="../../../assets/images/icon_transactions_dots.svg"
-                                    alt=""></button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonTransactionButtons">
-                                <p class="dropdown-item">Edit</p>
-                                <p class="dropdown-item">Delete</p>
-                            </div>
-                        </td> -->
 
                         <td class="align-middle">
                             <div ngbDropdown class="d-inline-block">
